<resources>
    <string name="app_name">Dscountr.</string>
    <string name="enter_your_mobile_number">Your mobile number.</string>
    <string name="continue_reg">Sign Up</string>
    <string name="service_terms">Terms of Service</string>
    <string name="service_terms_privacy_policy">I agree to the <a href="https://www.google.com/"><font fgcolor='#FF1080D0'>Terms of Service</font></a> &amp; <a href="https://www.google.com/"><font fgcolor='#FF1080D0'>Privacy Policy</font></a></string>
    <string name="dscountr">Dscountr</string>
    <string name="help">Help</string>
    <string name="dot">.</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_verification_code">Enter the 6 digits code sent to your mobile number.</string>
    <string name="enter_email_verification_code">Enter the 6 digits code sent to your email address.</string>
    <string name="resend_verification_code"><u>Resend the verification code</u></string>
    <string name="back">Back</string>
    <string name="why_email"><u>Why do we need your email?</u></string>
    <string name="enter_your_email_address">Enter your email address.</string>
    <string name="add_your_date_of_birth">Add your date of birth.</string>
    <string name="enter_phone_number">Enter your name</string>
    <string name="enter_number">Let\'s start with your mobile number</string>
    <string name="enter_email">Perfect! Please enter your email address</string>
    <string name="enter_dob">Enter you date of birth</string>
    <string name="select_your_gender">Select your gender (male/female)</string>
    <string name="finish">Create Account</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="welcome_message">Hello, {first name}!</string>
    <string name="enjoy_great_discounts">Enjoy great discounts and rewards everyday on your shopping</string>
    <string name="start_now">Find Offer</string>
    <string name="have_any_questions">Have any questions? Visit our <font fgcolor='#FF1080D0'><u>Help Center</u></font> for answers to all your questions.</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="continue_btn">Continue</string>
    <string name="my_discount_list">My Discounts List</string>
    <string name="my_watch_list">My Watch List</string>
    <string name="my_basket">My Basket</string>
    <string name="settings">Settings</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="sign_in">Sign In</string>
    <string name="discounts_for_your_everyday_purchases">Discounts for your everyday purchases</string>
    <string name="get_discounts_here">Get discounts here to buy at your favorite supermarket</string>
    <string name="learn_more">Learn More</string>
    <string name="featured_retailers">Featured Retailers</string>
    <string name="view_all">View All</string>
    <string name="title_category">Categories</string>
    <string name="title_offer">Offers</string>
    <string name="title_gift">Gifts</string>
    <string name="title_discount">Discounts</string>
    <string name="write_a_shopping_list">Write a shopping list</string>
    <string name="write_a_shopping_list_description">Write a shopping list and easily pick discounted items to help you save on your next shopping.</string>
    <string name="shop_now">Shop now</string>
    <string name="shop_now_description">Are your at the supermarket? Tap here to view your shopping list and pay to earn points.</string>
    <string name="earn_credits">Earn Credits</string>
    <string name="earn_credits_description">Do you want discounts but have not decided what to buy? Earn credits you can use later to unlock offers.</string>
    <string name="featured_in_personal_use">Featured In Personal Care</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="enter_your_number">Enter your mobile number</string>
    <string name="are_you_a_new_customer">Are you a new customer?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="view_profile_info">View personal info</string>
    <string name="my_account">My Account</string>
    <string name="_346">346</string>
    <string name="bonus_points">Bonus Points</string>
    <string name="_5">5</string>
    <string name="credits">Credits</string>
    <string name="_16">16</string>
    <string name="leader_board">Leaderboard</string>
    <string name="share">Share</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="purchase_history">Purchase History</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="transfer_points">Transfer Points</string>
    <string name="earn_20_points">Earn 20 Points</string>
    <string name="personal_information">Personal Information</string>
    <string name="name">Name:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="julia_memon">Julia Memon</string>
    <string name="_23_march_1991">23 March 1991</string>
    <string name="gender">Gender:</string>
    <string name="f">F</string>
    <string name="mobile__number">Mobile Number:</string>
    <string name="_254_723_456789">+254 723 456789</string>
    <string name="email">Email:</string>
    <string name="jmemon12_hotmail_com">jmemon12@hotmail.com</string>
    <string name="connect_with_facebook">Connect With FaceBook</string>
    <string name="find_more_friends">Find more friends to invite for extra points. Share offers with friends. Receive rewards for any friend who uses your link.</string>
    <string name="verify_phone">Verify Mobile Number</string>
    <string name="enter_your_first_name">First Name</string>
    <string name="enter_your_last_name">Last Name</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Julia Memon</string>
    <string name="nav_header_subtitle">View profile</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_categories">Product Categories</string>
    <string name="menu_retailer">Select Retailer</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_discount_list">Discount List</string>
    <string name="menu_wish_list">Wish List</string>
    <string name="menu_shopping_list">Shopping List</string>
    <string name="menu_new_shopping_list">New shopping list</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support">Help &amp; Support</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="fb_shop_now">Shop Now</string>
    <string name="icon">icon</string>
    <string name="view_your_profile">View your profile</string>
    <string name="invite_a_friend">Invite A Friend</string>
    <string name="_0">0</string>
    <string name="points">Points</string>
    <string name="offers">Offers</string>
    <string name="saved_history">Saved History</string>
    <string name="activity">Activity</string>
</resources>
