<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/profile"
          android:title="@string/profile"
          android:orderInCategory="100"
          app:showAsAction="never"/>


    <item android:id="@+id/myDiscountList"
          android:title="@string/my_discount_list"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/basket_list"
          android:title="@string/my_basket"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/wish_list"
          android:title="@string/my_watch_list"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/helpSupport"
          android:title="@string/help_support"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/signin"
          android:title="@string/sign_in"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
