<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Product Categories"/>
        <item
                android:id="@+id/select_retailer"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Select Retailer"/>
        <item
                android:id="@+id/discount_list"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/my_discount_list"/>

        <item
                android:id="@+id/shopping_list"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/my_shopping_list"/>

        <item
                android:id="@+id/watch_list"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/my_watch_list"/>

        <item
                android:id="@+id/basket_list"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/my_basket"/>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                    android:id="@+id/action_settings"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/action_settings"/>
            <item
                    android:id="@+id/helpSupport"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/help_support"/>
        </menu>
    </item>

</menu>
