<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/miSearch"
        android:orderInCategory="9"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        tools:ignore="AlwaysShowAction"
        android:fontFamily="@font/roboto_medium"
        android:textSize="12sp"/>

    <item
        android:id="@+id/miNotification"
        android:orderInCategory="10"
        android:icon="@drawable/ic_notifications_white_24dp"
        android:title="@string/notification"
        app:showAsAction="ifRoom"
        app:actionLayout="@layout/layout_menu_notification"
        android:fontFamily="@font/roboto_medium"
        android:textSize="12sp"/>

    <item
        android:id="@+id/miNewShoppingList"
        android:orderInCategory="12"
        android:icon="@drawable/ic_description_gray_24dp"
        android:title="@string/menu_new_shopping_list"
        app:showAsAction="never"
        android:fontFamily="@font/roboto_medium"
        android:textSize="12sp"/>

    <item
        android:id="@+id/miCredits"
        android:orderInCategory="12"
        android:icon="@drawable/ic_monetization_on_gray_24dp"
        android:title="@string/earn_credits"
        app:showAsAction="never"
        android:fontFamily="@font/roboto_medium"
        android:textSize="12sp"/>

    <item
        android:id="@+id/miShopnow"
        android:orderInCategory="12"
        android:icon="@drawable/ic_shopping_cart_gray_24dp"
        android:title="@string/shop_now"
        app:showAsAction="never"
        android:fontFamily="@font/roboto_medium"
        android:textSize="12sp"/>
</menu>