<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:showIn="@layout/activity_login"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:paddingBottom="10dp"
    android:clipToPadding="false"
    android:background="@color/colorWhite">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/tvWelcomeBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:lineSpacingExtra="5sp"
            android:text="@string/welcome_back"
            android:textColor="@color/colorSectionTitle"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvEnterMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvWelcomeBack"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="5sp"
            android:text="@string/enter_your_number"
            android:textColor="@color/colorSectionTitle"
            android:textSize="15sp" />

        <dscountr.app.co.ke.dscountr_android_app.view.utils.NoChangingBackgroundTextInputLayout
            android:id="@+id/tlenterNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/tvEnterMobile"
            app:errorTextAppearance="@style/Error_Appearance"
            android:layout_centerHorizontal="true"
            app:hintTextAppearance="@style/TextAppearence.TextInputLayout.Primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_bg"
                android:digits="0123456789"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/enter_your_mobile_number"
                android:inputType="phone"
                android:lineSpacingExtra="5sp"
                android:maxLength="10"
                android:paddingLeft="24dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorProductName"
                android:textColorHint="@color/colorBottomBorder"
                android:textSize="14sp"
                android:textStyle="normal" />
        </dscountr.app.co.ke.dscountr_android_app.view.utils.NoChangingBackgroundTextInputLayout>

        <TextView
            android:id="@+id/tvTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tlenterNumber"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="5sp"
            android:text="@string/service_terms"
            android:textColor="@color/colorEditCancelUndoButtonLinks"
            android:textSize="13sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btnNumber"
            android:layout_width="280dp"
            android:layout_height="35dp"
            android:layout_below="@+id/tvTerms"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/signin_button"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="4sp"
            android:text="@string/continue_reg"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="11sp"
            android:textStyle="normal"
            app:textAllCaps="false" />


        <View
            android:id="@+id/vNumberHorizontal"
            android:layout_width="match_parent"
            android:layout_height= "0.5dp"
            android:layout_marginTop="55.5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorBottomBorder"
            android:layout_below="@+id/btnNumber"/>

        <TextView
            android:id="@+id/tvNewCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vNumberHorizontal"
            android:layout_marginTop="13.5dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:lineSpacingExtra="5sp"
            android:text="@string/are_you_a_new_customer"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vNumberHorizontal"
            android:layout_marginStart="76dp"
            android:layout_marginLeft="76dp"
            android:layout_marginTop="13.5dp"
            android:layout_toEndOf="@+id/tvNewCustomer"
            android:layout_toRightOf="@+id/tvNewCustomer"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="5sp"
            android:text="@string/sign_up"
            android:textColor="@color/colorEditCancelUndoButtonLinks"
            android:textSize="13sp" />

        <View
            android:id="@+id/vNewCustomerHorizontal"
            android:layout_width="match_parent"
            android:layout_height= "0.5dp"
            android:layout_marginTop="13.5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorBottomBorder"
            android:layout_below="@+id/tvNewCustomer"/>
    </RelativeLayout>

</ScrollView>