<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlNavigationHeader"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/ic_account_circle_gray_24dp" />

    <LinearLayout
        android:id="@+id/profileNameLink"
        android:layout_width="270dp"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/imageView1"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/imageView1"
        android:paddingStart="12dp"
        android:paddingLeft="12dp">

        <TextView
            android:id="@+id/navName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/profViewLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"/>

    </LinearLayout>

</RelativeLayout>

